improve err msgs
